# i18n-status.nvim

./: .gitignore  Makefile  README.md  lefthook.yaml  typos.toml  vim.yaml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
doc/: i18n-status.txt
lua/i18n-status/: actions.lua  blink.lua  config.lua  core.lua  doctor.lua  extract.lua  extract_diff.lua  extract_review.lua  extract_review_apply.lua  filetypes.lua  fs.lua  hardcoded.lua  health.lua  init.lua  json.lua  key_write.lua  ops.lua  render.lua  resolve.lua  resource_cache.lua  resource_discovery.lua  resource_index.lua  resource_io.lua  resource_queries.lua  resource_roots.lua  resource_watch_service.lua  resources.lua  review.lua  review_actions.lua  review_buffers.lua  review_filters.lua  review_sections.lua  review_shared_ui.lua  review_ui.lua  rpc.lua  scan.lua  state.lua  text.lua  treesitter.lua  ts_helpers.lua  (+5 more)
plugin/: i18n-status.lua
rust/: Cargo.toml  deny.toml
rust/src/: doctor.rs  hardcoded.rs  lib.rs  main.rs  resolve.rs  rpc.rs  scan.rs  util.rs
rust/src/resource/: discovery.rs  index.rs  io.rs  mod.rs
rust/src/scan/: call_extract.rs  const_eval.rs  mod.rs  parser.rs  resource_json.rs  scope.rs
rust/src/scan/const_eval/: tests.rs
rust/tests/: doctor_test.rs  hardcoded_test.rs  resolve_test.rs  scan_test.rs
scripts/: download-binary.sh
tests/: helpers.lua  minimal_init.lua
tests/integration/: add_key_spec.lua  extract_review_spec.lua  extract_spec.lua  failure_spec.lua  goto_definition_spec.lua  hover_spec.lua  lang_spec.lua  render_spec.lua  review_spec.lua  (+1 more)
(+33 files in other folders)
