[package]
name = "i18n-status-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "i18n-status-core"
path = "src/main.rs"

[lib]
name = "i18n_status_core"
path = "src/lib.rs"

[dependencies]
swc_ecma_parser = "34"
swc_ecma_ast = "20"
swc_common = "18"
swc_atoms = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
rayon = "1"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
